# macroquad-raytracer

./: .gitignore  Cargo.toml  README.md
src/: app_options.rs  bounds.rs  camera.rs  canvas.rs  color.rs  cone.rs  cube.rs  cylinder.rs  float.rs  group.rs  intersection.rs  lib.rs  light.rs  macroquad.rs  main.rs  material.rs  matrix.rs  obj_parser.rs  object.rs  pattern.rs  plane.rs  prelude.rs  projectile.rs  ray.rs  shape.rs  sphere.rs  test_common.rs  triangle.rs  tuple.rs  world.rs
