[package]
name = "macroquad-raytracer"
version = "0.2.0"
edition = "2024"
publish = ["git"]

[dependencies]
clap = { version = "=4.5.13", features = ["derive"] }
macroquad = { version = "=0.4.14", features = ["audio"] }
rayon = "1.10.0"

[lib]
name = "macroquad_raytracer"
path = "src/lib.rs"

[[bin]]
name = "macroquad_raytracer"
path = "src/main.rs"
